Modified Details.cshtml, RegisterViewModel.cs. Changed user models - user now have user name and full name.

--- a/Interactive/Interactive.Models/Interactive.Models.csproj
+++ b/Interactive/Interactive.Models/Interactive.Models.csproj
@@ -95,6 +95,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntityModels\ApplicationUser.cs" />
+    <Compile Include="EntityModels\Comment.cs" />
     <Compile Include="EntityModels\Post.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Account\ExternalLoginConfirmationViewModel.cs" />
