Created service layer for the Posts Controller.

--- a/Interactive/Interactive.Services/Interactive.Services.csproj
+++ b/Interactive/Interactive.Services/Interactive.Services.csproj
@@ -112,6 +112,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\NotificationExtensions.cs" />
     <Compile Include="HomeService.cs" />
     <Compile Include="Identity\ApplicationSignInManager.cs" />
     <Compile Include="Identity\ApplicationUserManager.cs" />
