--- a/Interactive/Interactive/packages.config
+++ b/Interactive/Interactive/packages.config
@@ -34,6 +34,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
+  <package id="Ninject" version="3.2.0.0" targetFramework="net461" />
+  <package id="Ninject.Web.Common" version="3.2.3.0" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Respond" version="1.4.2" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
